# vmlx

./: .gitignore  AUDIT_FIXES.md  CHANGELOG.md  LICENSE  README.md  latest.json  pyproject.toml  verify_fixes.sh
.agent/: rules
.agent/workflows/: build.md
.github/workflows/: ci.yml
autoresearch/: agent.py
docs/: final-audit-2026-03-16.md  index.md  mlxstudio-releases-readme.md
docs/api/: cancellation.md
docs/benchmarks/: README.md  image.md  llm.md  video.md
docs/development/: architecture.md  build-test-deploy.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: audio.md  continuous-batching.md  embeddings.md  mcp-tools.md  multimodal.md  python-api.md  reasoning.md  server.md  tool-calling.md
docs/plans/: 2026-02-09-request-cancellation-design.md  2026-03-14-feature-parity-design.md  2026-03-21-real-disk-streaming.md  2026-03-21-real-ssd-streaming-design.md  2026-03-21-ssd-implementation-matrix.md
docs/reference/: cli.md  configuration.md  models.md
notes/: prompt-lookup-decoding.md
panel/: CHANGELOG.md  ENGINE-UPDATES.md  LICENSE  PROJECT.md  README.md  SETUP.md  package-lock.json  package.json  tailwind.config.js
panel/scripts/: build-and-install.sh  bundle-python.sh
panel/src/: env.d.ts
panel/src/main/: database.ts  engine-manager.ts  index.ts  memory-enforcer.ts  model-config-registry.ts  process-manager.ts  server.ts  sessions.ts  tray.ts  update-checker.ts  vllm-manager.ts
panel/src/main/db/: model-settings.ts
panel/src/main/ipc/: audio.ts  benchmark.ts  cache.ts  chat.ts  coding-tools.ts  developer.ts  embeddings.ts  export.ts  image.ts  models.ts  performance.ts  sessions.ts  utils.ts  vllm.ts
panel/src/main/tools/: executor.ts  registry.ts
panel/src/preload/: index.ts
panel/src/renderer/: index.html
panel/src/renderer/src/: App.tsx  index.css  main.tsx
panel/src/renderer/src/components/: DownloadStatusBar.tsx  DownloadsView.tsx  UpdateBanner.tsx  UpdateNotice.tsx
panel/src/renderer/src/components/chat/: ChatList.tsx  (+10 more)
panel/src/renderer/src/contexts/: AppStateContext.tsx  SessionsContext.tsx
panel/src/renderer/src/providers/: ThemeProvider.tsx
panel/src/renderer/src/types/: app-state.ts
panel/src/shared/: imageModels.ts
panel/tests/: audit-fixes.test.ts  chat-ui.test.ts  comprehensive-audit.test.ts  developer-tools.test.ts  download-system.test.ts  image-system.test.ts  layout-shell.test.ts  reasoning-display.test.ts  session-port-ui.test.ts  settings-flow.test.ts  update-checker.test.ts
tests/: __init__.py  conftest.py  stress_tool_calls.py  test_anthropic_adapter.py  test_api_models.py  test_api_utils.py  test_audio.py  test_audit_fixes.py  test_batching.py  test_batching_deterministic.py  test_block_disk_bfloat16.py  test_cache_fixes.py  test_cache_isolation.py  test_cache_types.py  test_cancellation.py  test_continuous_batching.py  test_disk_cache_unit.py  test_disk_streaming.py  test_embeddings.py  test_engine_audit.py  test_health_endpoint.py  test_hybrid_batching.py  test_image_api.py  test_image_gen.py  test_image_gen_engine.py  test_jang_loader.py  test_jit_toggle.py  test_kv_quant.py  test_llm.py  test_mcp_security.py  test_memory_cache.py  test_mllm.py  test_mllm_cache.py  test_mllm_continuous_batching.py  test_mllm_message_serialization.py  test_mllm_scheduler_cache.py  test_mllm_scheduler_stability.py  test_model_config_registry.py  test_model_name.py  test_model_registry.py  (+24 more)
tests/evals/gsm8k/: gsm8k_eval.py
tests/integration/: conftest.py  test_server_endpoints.py
vllm_mlx/: __init__.py  benchmark.py  block_disk_store.py  cli.py  disk_cache.py  engine_core.py  memory_cache.py  mllm_batch_generator.py  mllm_scheduler.py  model_config_registry.py  model_configs.py  model_runner.py  optimizations.py  output_collector.py  paged_cache.py  plugin.py  prefix_cache.py  scheduler.py  server.py  vision_embedding_cache.py
vllm_mlx/api/: __init__.py  models.py  tool_calling.py  utils.py
vllm_mlx/audio/: tts.py
vllm_mlx/engine/: batched.py  simple.py
vllm_mlx/mcp/: security.py
vllm_mlx/models/: llm.py  mllm.py
vllm_mlx/reasoning/: base.py  gptoss_parser.py  think_parser.py
vllm_mlx/tool_parsers/: abstract_tool_parser.py  auto_tool_parser.py  deepseek_tool_parser.py  functionary_tool_parser.py  glm47_tool_parser.py  granite_tool_parser.py  hermes_tool_parser.py  kimi_tool_parser.py  llama_tool_parser.py  minimax_tool_parser.py  nemotron_tool_parser.py  qwen_tool_parser.py  step3p5_tool_parser.py  xlam_tool_parser.py
vllm_mlx/utils/: mamba_cache.py  tokenizer.py
vmlx_engine/: __init__.py  benchmark.py  block_disk_store.py  cli.py  disk_cache.py  embedding.py  engine_core.py  gradio_app.py  gradio_text_app.py  image_gen.py  memory_cache.py  mllm_batch_generator.py  mllm_cache.py  mllm_scheduler.py  mlx_platform.py  model_config_registry.py  model_configs.py  model_registry.py  model_runner.py  multimodal_processor.py  optimizations.py  paged_cache.py  plugin.py  prefix_cache.py  request.py  reranker.py  scheduler.py  server.py  simple.py  speculative.py  worker.py
vmlx_engine/api/: __init__.py  anthropic_adapter.py  models.py  tool_calling.py  utils.py
vmlx_engine/audio/: __init__.py  stt.py
vmlx_engine/commands/: convert.py
vmlx_engine/engine/: __init__.py  base.py  batched.py  simple.py
vmlx_engine/mcp/: __init__.py  client.py  config.py  types.py
vmlx_engine/models/: __init__.py  llm.py  mllm.py
vmlx_engine/reasoning/: __init__.py  base.py  gptoss_parser.py  qwen3_parser.py  think_parser.py
vmlx_engine/tool_parsers/: __init__.py  abstract_tool_parser.py  auto_tool_parser.py  deepseek_tool_parser.py  functionary_tool_parser.py  glm47_tool_parser.py  granite_tool_parser.py  hermes_tool_parser.py  kimi_tool_parser.py  llama_tool_parser.py  minimax_tool_parser.py  mistral_tool_parser.py  nemotron_tool_parser.py  qwen_tool_parser.py  step3p5_tool_parser.py  xlam_tool_parser.py
vmlx_engine/utils/: __init__.py  cache_types.py  jang_loader.py  mamba_cache.py  model_inspector.py  ssd_generate.py  streaming_wrapper.py  tokenizer.py  weight_index.py
(+32 files in other folders)
